--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -6,10 +6,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LiftCalculator">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/textfield1"
+        android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <!-- basic button -->
+
     <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -17,5 +21,4 @@
         bootstrap:bb_icon_right="fa-android"
         bootstrap:bb_type="success"
         />
-
 </RelativeLayout>
