--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -10,10 +10,17 @@
         android:id="@+id/textfield1"
         android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/layout"></LinearLayout>
     <!-- basic button -->
 
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:id="@+id/calculate"
+        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
