--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -23,11 +23,13 @@
         android:id="@+id/plates"></LinearLayout>
     <!-- basic button -->
     <com.beardedhen.androidbootstrap.BootstrapEditText
+        android:id="@+id/weightField"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:hint="@string/weight_hint"
         android:inputType="number"
+        android:maxLength="4"
         />
 
 
@@ -38,7 +40,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/submit"
-        bootstrap:bb_icon_right="fa-android"
         bootstrap:bb_type="success"
         />
 
