--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -14,6 +14,12 @@
         android:id="@+id/textfield1"
         android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Spinner
+        android:id="@+id/regionSelect"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:drawSelectorOnTop="true"
+        android:entries="@array/region_select"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -27,7 +33,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="@string/weight_hint"
+        android:hint="@string/weight_lbs"
         android:inputType="number"
         android:maxLength="4"
         />
