--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -10,22 +10,52 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LiftCalculator">
 
-    <TextView
-        android:id="@+id/textfield1"
-        android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <Spinner
-        android:id="@+id/regionSelect"
+    <LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight=".1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:text="@string/units"
+            android:textSize="18sp"
+            android:paddingTop="5dp"
+            android:paddingRight="20dp"
+            android:textColor="@color/black"/>
+        <Spinner
+            android:id="@+id/regionSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:drawSelectorOnTop="true"
+            android:entries="@array/region_select"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:drawSelectorOnTop="true"
-        android:entries="@array/region_select"/>
-    <Spinner
-        android:id="@+id/barSelect"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:drawSelectorOnTop="true"
-        android:entries="@array/bar_lbs"/>
+        android:layout_weight=".1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:text="@string/bar_weight"
+            android:textSize="18sp"
+            android:paddingTop="5dp"
+            android:paddingRight="20dp"
+            android:textColor="@color/black"/>
+        <Spinner
+            android:id="@+id/barSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:drawSelectorOnTop="true"
+            android:entries="@array/region_select"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:orientation="horizontal"
