--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -14,16 +14,18 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_weight=".1">
+    android:layout_weight=".1"
+    android:paddingBottom="5dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="@string/units"
             android:textSize="18sp"
-            android:paddingTop="5dp"
+            android:paddingTop="2.5dp"
             android:paddingRight="20dp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:paddingLeft="0dp" />
         <Spinner
             android:id="@+id/regionSelect"
             android:layout_width="wrap_content"
@@ -44,7 +46,7 @@
             android:layout_height="fill_parent"
             android:text="@string/bar_weight"
             android:textSize="18sp"
-            android:paddingTop="5dp"
+            android:paddingTop="2.5dp"
             android:paddingRight="20dp"
             android:textColor="@color/black"/>
         <Spinner
