--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -19,17 +19,18 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:text="@string/units"
             android:textSize="18sp"
-            android:paddingTop="2.5dp"
             android:paddingRight="20dp"
             android:textColor="@color/black"
             android:paddingLeft="0dp" />
         <Spinner
             android:id="@+id/regionSelect"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:drawSelectorOnTop="true"
             android:entries="@array/region_select"/>
 
@@ -43,16 +44,17 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:text="@string/bar_weight"
             android:textSize="18sp"
-            android:paddingTop="2.5dp"
             android:paddingRight="20dp"
             android:textColor="@color/black"/>
         <Spinner
             android:id="@+id/barSelect"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:drawSelectorOnTop="true"
             android:entries="@array/region_select"/>
 
