--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -91,6 +91,14 @@
             android:id="@+id/plates"></ImageView>
     </RelativeLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/plates"
+        android:textSize="18sp"
+        android:paddingBottom="0dp"/>
+
     <!-- weight buttons -->
     <LinearLayout
         android:id="@+id/weightButtons"
@@ -98,7 +106,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight=".1"
+        android:paddingBottom="4dp"
         android:layout_gravity="center_horizontal">
+
         <include
             android:id="@+id/weightSelector0"
             android:layout_width="match_parent"
@@ -146,9 +156,10 @@
         android:id="@+id/weightField"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal"
         android:hint="@string/weight_lbs"
         android:inputType="number"
+        android:padding="1dp"
         android:maxLength="3"
         />
 
