--- a/app/src/main/res/layout/weight_selector.xml
+++ b/app/src/main/res/layout/weight_selector.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:minWidth="0dp"/>
-    <Spinner
+    <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></Spinner>
+        android:hint="#"
+        android:padding="1dp"
+        android:layout_gravity="center_horizontal"
+        android:entries="@array/numbers"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:maxLength="1"
+        android:inputType="number"
+        />
 
 </LinearLayout>
