--- a/app/src/main/res/layout/weight_selector.xml
+++ b/app/src/main/res/layout/weight_selector.xml
@@ -8,9 +8,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:minWidth="0dp"/>
+        android:minWidth="0dp"
+        android:onClick="weightButtonClicked"/>
     <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/spinner"
+        android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:hint="#"
         android:padding="1dp"
