--- a/app/src/main/res/layout/weight_selector.xml
+++ b/app/src/main/res/layout/weight_selector.xml
@@ -10,17 +10,17 @@
         android:layout_gravity="center_horizontal"
         android:minWidth="0dp"
         android:onClick="weightButtonClicked"/>
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/plateCount"
         android:layout_width="wrap_content"
-        android:hint="#"
+        android:dropDownWidth="wrap_content"
+        android:textAlignment="center"
+        android:onClick="numberSelect"
+        android:textSize="14pt"
+        android:clickable="true"
         android:padding="1dp"
         android:layout_gravity="center_horizontal"
-        android:entries="@array/numbers"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:maxLength="1"
-        android:inputType="number"
         />
 
 </LinearLayout>
