--- a/app/src/main/res/layout/activity_lift_calculator.xml
+++ b/app/src/main/res/layout/activity_lift_calculator.xml
@@ -157,7 +157,7 @@
        >
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/weight_selector"
             android:textSize="18sp"
             android:paddingRight="5dp"
@@ -166,7 +166,7 @@
         <com.beardedhen.androidbootstrap.BootstrapEditText
             android:id="@+id/weightField"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/weight_lbs"
             android:inputType="number"
             android:paddingLeft="5dp"
@@ -175,6 +175,22 @@
             android:paddingTop="1dp"
             android:maxLength="3"
             />
+        <Space
+            android:layout_width="5dp"
+            android:layout_height="match_parent"/>
+        <Button
+            android:id="@+id/percent"
+            android:layout_width="wrap_content"
+            android:minWidth="5dp"
+            android:minHeight="5dp"
+            android:paddingTop="1dp"
+            android:background="@color/bbutton_info"
+            android:paddingBottom="1dp"
+            android:textSize="8pt"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:layout_height="wrap_content"
+            android:text="@string/percent"/>
     </LinearLayout>
 
 </LinearLayout>
